<!--
  ~ Copyright 2017 TedaLIEz
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~    http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<resources>
  <string name="app_name">AndroidAssistant</string>
  <string name="item_power_mang">电量管理</string>
  <string name="item_power_detail">当前剩余电量%1$d%%</string>
  <string name="item_data">流量管理</string>
  <string name="item_data_detail">本月已使用流量%1$s</string>
  <string name="item_block">骚扰拦截</string>
  <string name="item_block_detail_disable">未开启</string>
  <string name="item_block_detail_enable">已开启</string>
  <string name="item_block_black_list">黑名单拦截</string>
  <string name="item_set_black_list">设置黑名单号码</string>
  <string name="item_blocked_detail">查看已拦截的电话短信</string>
  <string name="item_auto_block">智能拦截</string>
  <string name="main_mb">MB</string>
  <string name="main_running_mem">运行内存</string>

  <string name="power_saving_des">省电模式说明：实时监控后台应用使用情况，关闭您长时间未使用的应用；调整您的屏幕亮度</string>
  <string name="power_saving_enable">一键省电</string>
  <string name="power_saving_mode">开启省电模式</string>
  <string name="power_remain">剩余</string>
  <string name="power_per">%</string>
  <string name="power_remain_txt">剩余</string>
  <string name="main_clean_background">一键清理后台</string>
  <string name="grant_settings_access">请允许本应用修改系统设置!</string>
  <string name="save_power_success">省电成功</string>
  <string name="enter_power_save_mode">进入省电模式</string>
  <string name="clr_background_success">清理后台成功</string>
  <string name="restore_saving_mode">关闭省电模式</string>


  <string name="title_activity_main">安卓手机助手</string>
  <string name="title_activity_power">电量管理</string>
  <string name="label_activity_main">MainActivity</string>
  <string name="label_activity_power">PowerActivity</string>
  <string name="label_activity_black_list">BlackListActivity</string>

  <string name="title_activity_black_list">设置黑名单号码</string>
  <string name="label_activity_blocked_list">BlockedListActivity</string>

  <string name="title_activity_blocked_list">查看已拦截的电话短信</string>
  <string name="forbid_auto">智能拦截</string>
  <string name="forbid_list">黑名单拦截</string>
  <string name="title_block">骚扰拦截</string>
  <string name="autoblock_update">智能拦截数据库更新</string>
  <string name="update_btn">更新</string>
  <string name="sms_detail">短信内容</string>
  <string name="title_activity_data">流量管理</string>
  <string name="data_used">您本月已使用 %1$s </string>
  <string name="data_setting">设置流量提醒</string>
  <string name="data_setting_detail">设置流量提醒，达到流量上限限时会收到提示哦，从此放心大胆开流量</string>
  <string name="charging">充电中</string>
  <string name="add_black_num">添加黑名单号码</string>
  <string name="hint_add_black_num">请输入号码</string>
  <string name="add_num_error">非法的手机号</string>
  <string name="no">Cancel</string>
  <string name="ok">OK</string>
  <string name="unknown_area">未知归属地</string>
  <string name="delete_black_num_title">删除黑名单号码</string>
  <string name="delete_black_num_content">确认删除吗？</string>
  <string name="delete_blocked_msg_title">删除黑名单短信</string>
  <string name="delete_blocked_msg_content">确认删除该短信吗？</string>
  <string name="delete_blocked_number_title">删除拦截电话</string>
  <string name="delete_blocked_number_content">确认删除此拦截电话吗？</string>
  <string name="open_mobile_data">请开启流量开关以触发流量监控!</string>
  <string name="no_data">暂无数据</string>
</resources>
