<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright 2017 TedaLIEz
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~    http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<LinearLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  android:orientation="vertical"
  tools:context="com.hustunique.androidassistant.PowerActivity">


  <android.support.design.widget.AppBarLayout
    android:id="@+id/appbar"
    android:animateLayoutChanges="true"
    android:layout_width="match_parent"
    android:layout_height="0dp"
    android:layout_weight="1">
    <android.support.v7.widget.Toolbar
      android:id="@+id/toolbar"
      android:layout_width="match_parent"
      android:layout_height="?attr/actionBarSize"
      app:theme="@style/ThemeOverlay.AppCompat.Dark"
      app:titleTextColor="@color/textPrimaryColorInverse"
      app:title="@string/title_activity_power"/>
    <ViewAnimator
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:layout_gravity="center">

      <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <RelativeLayout
          android:id="@+id/power_layout"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_centerInParent="true"
          android:padding="@dimen/power_circle_padding"
          android:background="@drawable/power_bgd">
          <TextView
            android:id="@+id/power_tv"
            style="@style/TextAppearance.Title.Inverse"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="43"
            android:textSize="100sp"/>
          <TextView
            android:id="@+id/power_per"
            style="@style/TextAppearance.SubHead.Inverse"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@+id/power_tv"
            android:layout_toRightOf="@+id/power_tv"
            android:text="@string/power_per"
            android:textColor="@color/textPrimaryColorInverse"/>
        </RelativeLayout>

        <TextView
          style="@style/TextAppearance.SubHead.Inverse"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_alignBottom="@+id/power_layout"
          android:layout_alignEnd="@+id/power_layout"
          android:layout_alignRight="@+id/power_layout"
          android:text="@string/power_remain_txt"/>
      </RelativeLayout>
    </ViewAnimator>

  </android.support.design.widget.AppBarLayout>


  <include
    layout="@layout/content_power"/>

</LinearLayout>
