<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright 2017 TedaLIEz
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~    http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools"
  android:layout_width="match_parent"
  android:layout_marginTop="@dimen/activity_horizontal_margin"
  android:layout_marginBottom="@dimen/activity_horizontal_margin"
  android:layout_height="wrap_content"
  android:background="@color/colorBgd"
  android:orientation="vertical"
  app:layout_behavior="@string/appbar_scrolling_view_behavior"
  tools:showIn="@layout/activity_main">

  <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_marginTop="@dimen/main_list_paddingtop">

    <RelativeLayout
      style="@style/Material.Item">
      <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/list_power_avator"
        android:layout_width="@dimen/main_list_image_width"
        android:layout_height="@dimen/main_list_image_height"
        android:layout_marginTop="@dimen/main_list_padding"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:src="@drawable/ic_battery_alert_grey_500_36dp"/>
      <LinearLayout
        style="@style/Material.Item.TwoLineLayout"
        android:layout_toRightOf="@+id/list_power_avator"
        android:layout_toEndOf="@+id/list_power_avator"
        android:layout_toLeftOf="@+id/item_power_btn"
        android:layout_toStartOf="@+id/item_power_btn">
        <TextView
          android:id="@+id/tv_power_management"
          style="@style/TextAppearance.Material.Item.TwoLineLayout.Body1"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:text="@string/item_power_mang"/>
        <TextView
          android:id="@+id/power_detail"
          style="@style/TextAppearance.Material.Item.TwoLineLayout.Body2"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:text="@string/item_power_detail"/>
      </LinearLayout>

      <ImageView
        android:id="@+id/item_power_btn"
        android:layout_width="@dimen/main_list_image_width"
        android:layout_height="@dimen/main_list_image_height"
        android:layout_marginTop="@dimen/main_list_padding"
        android:layout_marginStart="@dimen/main_list_padding"
        android:layout_marginLeft="@dimen/main_list_padding"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:scaleType="centerInside"
        android:src="@drawable/ic_navigate_next_grey_500_36dp"/>
    </RelativeLayout>
    <View
      android:layout_width="match_parent"
      android:layout_marginLeft="72dp"
      android:layout_marginStart="72dp"
      android:layout_height="1dp"
      android:background="?android:attr/dividerVertical"/>

    <RelativeLayout
      style="@style/Material.Item">
      <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/list_data_avator"
        android:layout_width="@dimen/main_list_image_width"
        android:layout_height="@dimen/main_list_image_height"
        android:layout_marginTop="@dimen/main_list_padding"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:src="@drawable/ic_perm_data_setting_grey_500_36dp"/>
      <LinearLayout
        style="@style/Material.Item.TwoLineLayout"
        android:layout_toRightOf="@id/list_data_avator"
        android:layout_toEndOf="@id/list_data_avator"
        android:layout_toLeftOf="@+id/item_data_btn"
        android:layout_toStartOf="@+id/item_data_btn">
        <TextView
          android:id="@+id/tv_data_management"
          style="@style/TextAppearance.Material.Item.TwoLineLayout.Body1"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:text="@string/item_data"/>
        <TextView
          android:id="@+id/data_detail"
          style="@style/TextAppearance.Material.Item.TwoLineLayout.Body2"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:text="@string/item_data_detail"/>
      </LinearLayout>

      <ImageView
        android:id="@+id/item_data_btn"
        android:layout_width="@dimen/main_list_image_width"
        android:layout_height="@dimen/main_list_image_height"
        android:layout_marginTop="@dimen/main_list_padding"
        android:layout_marginStart="@dimen/main_list_padding"
        android:layout_marginLeft="@dimen/main_list_padding"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:scaleType="centerInside"
        android:src="@drawable/ic_navigate_next_grey_500_36dp"/>
    </RelativeLayout>

    <View
      android:layout_width="match_parent"
      android:layout_height="1dp"
      android:layout_marginLeft="72dp"
      android:layout_marginStart="72dp"
      android:background="?android:attr/dividerVertical"/>
    <RelativeLayout
      style="@style/Material.Item">
      <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/list_block_avator"
        android:layout_width="@dimen/main_list_image_width"
        android:layout_height="@dimen/main_list_image_height"
        android:layout_marginTop="@dimen/main_list_padding"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:src="@drawable/ic_block_grey_500_36dp"/>
      <LinearLayout
        style="@style/Material.Item.TwoLineLayout"
        android:layout_toRightOf="@id/list_block_avator"
        android:layout_toEndOf="@id/list_block_avator"
        android:layout_toLeftOf="@+id/item_block_btn"
        android:layout_toStartOf="@+id/item_block_btn">
        <TextView
          android:id="@+id/tv_block_management"
          style="@style/TextAppearance.Material.Item.TwoLineLayout.Body1"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:text="@string/item_block"/>
        <TextView
          android:id="@+id/block_detail"
          style="@style/TextAppearance.Material.Item.TwoLineLayout.Body2"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:text="@string/item_block_detail"/>
      </LinearLayout>

      <ImageView
        android:id="@+id/item_block_btn"
        android:layout_width="@dimen/main_list_image_width"
        android:layout_height="@dimen/main_list_image_height"
        android:layout_marginTop="@dimen/main_list_padding"
        android:layout_marginStart="@dimen/main_list_padding"
        android:layout_marginLeft="@dimen/main_list_padding"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:scaleType="centerInside"
        android:src="@drawable/ic_navigate_next_grey_500_36dp"/>
    </RelativeLayout>

  </LinearLayout>


</LinearLayout>